--- a/my-eks-chart/values.yaml
+++ b/my-eks-chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo
+  repository: 234145953918.dkr.ecr.ap-south-1.amazonaws.com/pradeep
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
